--- a/CPP09/ex02/Makefile
+++ b/CPP09/ex02/Makefile
@@ -1,6 +1,7 @@
-NAME =  PmergeMe
+NAME = PmergeMe
 CC = c++
 FLAGS = -Wall -Wextra -Werror -Iinclude -std=c++98
+DEFINES =
 
 SRC = main.cpp PmergeMe.cpp
 OBJDIR = obj
@@ -9,11 +10,11 @@ OBJ = $(addprefix $(OBJDIR)/, $(SRC:.cpp=.o))
 all: $(NAME)
 
 $(NAME): $(OBJ)
-	$(CC) $(FLAGS) $(OBJ) -o $(NAME)
+	$(CC) $(FLAGS) $(DEFINES) $(OBJ) -o $(NAME)
 
 $(OBJDIR)/%.o: %.cpp
 	@mkdir -p $(OBJDIR)
-	$(CC) $(FLAGS) -c $< -o $@
+	$(CC) $(FLAGS) $(DEFINES) -c $< -o $@
 
 clean:
 	rm -rf $(OBJDIR)
@@ -22,3 +23,6 @@ fclean: clean
 	rm -f $(NAME)
 
 re: fclean all
+
+debug:
+	$(MAKE) re DEFINES="-DDEBUG=1"
